--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,21 @@
 # SITE CONFIGURATION
-title: Sleek # your site title
-author: GitHub User # You :P
+title: Open Neuroscience # your site title
+author: amchagas # You :P
 description: > # Meta description of Homepage
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/sleek" # the subpath of your site, e.g. /blog
-url: "https://janczizikow.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+  Open Source projects for neuroscience
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://open-neuroscience.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
   name: Your Name
   links:
-    - https://twitter.com/BenBalter
-    - https://www.facebook.com/ben.balter
-    - https://www.linkedin.com/in/BenBalter
-    - https://plus.google.com/+BenBalter
-    - https://github.com/benbalter
-    - https://keybase.io/benbalter
+    - https://twitter.com/openeuroscience
+    #- https://www.facebook.com/ben.balter
+    #- https://www.linkedin.com/in/BenBalter
+    #- https://plus.google.com/+BenBalter
+    - https://github.com/open-neuroscience
+    #- https://keybase.io/benbalter
 
 # THEME SETTINGS
 navigation: # Navigation links
@@ -30,14 +28,14 @@ tagline: >
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
-email: your-email@domain.com # email for form submission
+email: openeuroscience@gmail.com # email for form submission
 
-twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
-github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
-instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
+twitter_username: openeuroscience # replace with your_twitter_username or comment to remove link from footer
+github_username:  amchagas # replace with your_github_username or comment to remove link from footer
+#instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 
-disqus:
-  shortname: janczizikow # to enable comments replace with your_disqus_shortname
+#disqus:
+#  shortname: janczizikow # to enable comments replace with your_disqus_shortname
 
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
