test loading images

--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ social:
 # THEME SETTINGS
 navigation: # Navigation links
   - {name: 'Home', link: '/'}
-  - {name: 'Hardware', link: '/_pages/hardware'}
+  - {name: 'Hardware', link: '/hardware'}
   - {name: 'Software', link: '/software'}
-  - {name: 'Computers', link: '/_pages/computers'}
+  - {name: 'Computers', link: '/computers'}
   - {name: 'About', link: '/about'}
   - {name: 'Contact', link: '/contact'}
 
