--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ github_username:  open-neuroscience # replace with your_github_username or comme
 disqus:
   shortname: amchagas # to enable comments replace with your_disqus_shortname
 
-# google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
+google_tag_manager: GTM-MMZNQTQ # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
 service_worker: true
 
