--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ github_username:  open-neuroscience # replace with your_github_username or comme
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
-  shortname: open-neuroscience # to enable comments replace with your_disqus_shortname
+  shortname: open-neuroscienc-github-io # to enable comments replace with your_disqus_shortname
 
 google_tag_manager: GTM-MMZNQTQ # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
